very small javascript update. modified jQuery anonymous to SEAF
Turned unload jQuery function to a SEAF

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     });
     </script>
     <script>
-    $(function() {
+    (function($) {
         $('a[href*=#]:not([href=#])').click(function() {
             if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
 
@@ -255,7 +255,7 @@
                 }
             }
         });
-    });
+    })(jQuery);
     </script>
 
 </body>
