--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.css' rel='stylesheet' />
+    <style type="text/css">
+        
+    </style>
 </head>
 
 <body>
@@ -45,12 +48,21 @@
     <!-- Full Page Image Header Area -->
     <div id="top" class="header">
         <div class="vert-text">
+
+            <img src="img/cfa_logo_ntxt_tb.png" alt="Code For Asheville" class="img-responsive img-rounded img-logo center-block">
+ 
             <h1>Code For Asheville</h1>
             <h3>
                 <em>We</em> Build Awesome Civic Applications,
-                <em>You</em> Can Help Make Them Better</h3>
+                <em>You</em> Help Make Them Better
+            </h3>
+ 
             <a href="#about" class="btn btn-default btn-lg">Find Out More</a>
+
+
+
         </div>
+ 
     </div>
     <!-- /Full Page Image Header Area -->
 
@@ -59,6 +71,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9 col-md-offset-1 text-center">
+
+            <img src="img/cfa_logo_ntxt_tb.png" alt="Code For Asheville" class="img-responsive img-rounded img-logo center-block">                    
                     <h2>Our Mission!</h2>
                     <p class="lead">Code for Asheville seeks to improve the way local government works for everyone by bringing people, technology and the efforts of civic hackers in our community together. To this end, Code for Asheville:</p>
                     <p>
