Replaces place-holder content current site info
Mostly a copy/past job.

--- a/index.html
+++ b/index.html
@@ -101,29 +101,38 @@
                 <div class="col-md-2 col-md-offset-2 text-center">
                     <div class="service-item">
                         <i class="service-icon fa fa-rocket"></i>
-                        <h4>Spacecraft Repair</h4>
-                        <p>Did your navigation system shut down in the middle of that asteroid field? We can repair any dings and scrapes to your spacecraft!</p>
+                        <h4>See Our Inspiration</h4>
+                          <p><a href="http://codeforamerica.org/">Code for America</a> is the organization that helped inspire 
+    many of us that we can change our city.</p>
                     </div>
                 </div>
                 <div class="col-md-2 text-center">
                     <div class="service-item">
                         <i class="service-icon fa fa-magnet"></i>
-                        <h4>Problem Solving</h4>
-                        <p>Need to know how magnets work? Our problem solving solutions team can help you identify problems and conduct exploratory research.</p>
+                        <h4>Join Online Discussions</h4>
+                        <p><a href="https://groups.google.com/a/codeforamerica.org/forum/#!forum/open-asheville">
+    An open conversation online</a> about what we're doing now and what's next.</p>
                     </div>
                 </div>
                 <div class="col-md-2 text-center">
                     <div class="service-item">
                         <i class="service-icon fa fa-shield"></i>
-                        <h4>Blacksmithing</h4>
-                        <p>Planning a time travel trip to the middle ages? Preserve the space time continuum by blending in with period accurate armor and weapons.</p>
+                        <h4>Come To Our Meetups</h4>
+                        <p>Visit our <a href="http://www.meetup.com/Code-for-Asheville/http://www.meetup.com/Code-for-Asheville/">Meetups site</a> 
+                        for our next location and time. We try to meet every few Mondays where we hack (develop) our projects,  
+          or brainstorm on current issues and activities around Asheville.</p>
                     </div>
                 </div>
                 <div class="col-md-2 text-center">
                     <div class="service-item">
                         <i class="service-icon fa fa-pencil"></i>
-                        <h4>Pencil Sharpening</h4>
-                        <p>We've been voted the best pencil sharpening service for 10 consecutive years. If you have a pencil that feels dull, we'll get it sharp!</p>
+                        <h4>Press</h4>
+                        <ul>
+		          			<li><a href="http://www.govtech.com/e-government/Asheville-NC-Community-Gets-Behind-Open-Data.html">Open data in Asheville</a></li>
+		          			<li><a href="http://www.govtech.com/National-Civic-Hacking-Event-Takes-Many-Forms-Locally.html">National Day of Civic Hacking</a> </li>
+							<li><a href="http://www.mountainx.com/article/50865/Will-hack-for-food-Local-techies-and-foodies-join-forces-to-create-altruistic-apps">Local MountainX Hack For food Coverage</a></li>
+		          			<li><a href="http://www.citizen-times.com/article/20130528/NEWS/305280014/Asheville-hackers-tackle-hunger?nclick_check=1">Local ACT Hack For food Coverage</a></li>
+		          		</ul>
                     </div>
                 </div>
             </div>
@@ -144,29 +153,21 @@
 
         <div class="container">
      <div class="row" ><h1>What have we done?<small></small></h1> </div>
-     <hr>
       <div class="row">
-            <div class="col-lg-4">
-                <h2>Project 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin auctor quam ac tempor. Cras a ante sed libero mollis sodales. Praesent fringilla, neque ut ultrices faucibus, dolor eros ultrices neque, nec bibendum arcu ipsum eget justo.</p>
-                <a class="btn btn-default" href="#">More Info</a>
+            <div class="col-lg-6">
+                <h2>The Budget App: Look @ Asheville</h2>
+                <ul>
+          			<li><a href="https://trello.com/board/look-at-asheville/511aa7b473f4346f5f0009c5">The To-Do list</a></li>
+          			<li><a href="https://github.com/codeforasheville/look-at-asheville">Github</a> </li>
+          			<li><a href="http://codeforasheville.github.com/look-at-asheville/">The App in action!</a></li>
+          		</ul>
             </div>
-            <div class="col-lg-4">
-                <h2>Project 2</h2>
-                <p>Phasellus vestibulum sagittis purus laoreet varius. Pellentesque malesuada malesuada mattis. Aliquam sed porta nisi, eget suscipit dolor. Nam ipsum sapien, rhoncus eu leo eu, ultricies pellentesque tellus.</p>
-                <a class="btn btn-default" href="#">More Info</a>
+            <div class="col-lg-6">
+                <h2>Highlights from National Day of Civic Hacking and the Hack for Food App</h2>
+                <ul>
+                	<li><a href="http://storify.com/scott_barnwell/hack-for-food-2013-asheville-nc?utm_content=storify-pingback&utm_medium=sfy.co-twitter&utm_campaign=&utm_source=direct-sfy.co&awesm=sfy.co_eLZr">Storify from the Hack for Food</a></li>
+                </ul>
             </div>
-            <div class="col-lg-4">
-                <h2>Project 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin auctor quam ac tempor. Cras a ante sed libero mollis sodales. Praesent fringilla, neque ut ultrices faucibus, dolor eros ultrices neque, nec bibendum arcu ipsum eget justo.</p>
-                <a class="btn btn-default" href="#">More Info</a>
-            </div>
-            <div class="col-lg-4">
-                <h2>Project 4</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin auctor quam ac tempor. Cras a ante sed libero mollis sodales. Praesent fringilla, neque ut ultrices faucibus, dolor eros ultrices neque, nec bibendum arcu ipsum eget justo.</p>
-                <a class="btn btn-default" href="#">More Info</a>
-            </div>        </div>
-
         </div>
     </div>
     <!-- /Portfolio -->
