tweak some stuff
meant to do this a branch

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
             <div class="row">
                 <div class="col-md-2 col-md-offset-2 text-center">
                     <div class="service-item">
-                        <i class="service-icon fa fa-rocket"></i>
-                        <h4>See Our Inspiration</h4>
+                        <i class="service-icon"><img src="img/flag-white.png" style="background-size: 43px auto;" /></i>
+                        <h3>See Our Inspiration</h3>
                           <p><a href="http://codeforamerica.org/">Code for America</a> is the organization that helped inspire 
     many of us that we can change our city.</p>
                     </div>
                 </div>
                 <div class="col-md-2 text-center">
                     <div class="service-item">
-                        <i class="service-icon fa fa-magnet"></i>
+                        <i class="service-icon fa fa-comments-o"></i>
                         <h4>Join Online Discussions</h4>
                         <p><a href="https://groups.google.com/a/codeforamerica.org/forum/#!forum/open-asheville">
     An open conversation online</a> about what we're doing now and what's next.</p>
@@ -117,7 +117,7 @@
                 <div class="col-md-2 text-center">
                     <div class="service-item">
                         <i class="service-icon fa fa-shield"></i>
-                        <h4>Come To Our Meetups</h4>
+                        <h3>Come To Our Meetups</h3>
                         <p>Visit our <a href="http://www.meetup.com/Code-for-Asheville/http://www.meetup.com/Code-for-Asheville/">Meetups site</a> 
                         for our next location and time. We try to meet every few Mondays where we hack (develop) our projects,  
           or brainstorm on current issues and activities around Asheville.</p>
@@ -125,9 +125,9 @@
                 </div>
                 <div class="col-md-2 text-center">
                     <div class="service-item">
-                        <i class="service-icon fa fa-pencil"></i>
-                        <h4>Press</h4>
-                        <ul>
+                        <i class="service-icon fa fa-files-o"></i>
+                        <h3>Press</h3>
+                        <ul class="list-unstyled">
 		          			<li><a href="http://www.govtech.com/e-government/Asheville-NC-Community-Gets-Behind-Open-Data.html">Open data in Asheville</a></li>
 		          			<li><a href="http://www.govtech.com/National-Civic-Hacking-Event-Takes-Many-Forms-Locally.html">National Day of Civic Hacking</a> </li>
 							<li><a href="http://www.mountainx.com/article/50865/Will-hack-for-food-Local-techies-and-foodies-join-forces-to-create-altruistic-apps">Local MountainX Hack For food Coverage</a></li>
