--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
-                    <h3>Our Services</h3>
+                    <h3>About Us</h3>
                     <hr>
                 </div>
             </div>
@@ -138,6 +138,10 @@
             </div>
         </div>
     </div>
+
+
+     
+
     <!-- /Services -->
 
     <!-- Callout -->
