--- a/index.html
+++ b/index.html
@@ -84,12 +84,17 @@
                     </p>
                 </div>
             </div>
+          <div class="row">
+                <div class="col-md-4 col-md-offset-4 text-center">
+                    <a href="#aboutus" class="btn btn-default btn-lg fa fa-question-circle">  More about us</a>
+                </div>
+        </div>       
         </div>
     </div>
     <!-- /Intro -->
 
     <!-- Services -->
-    <div id="services" class="services">
+    <div id="aboutus" class="services">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
@@ -135,7 +140,13 @@
 		          		</ul>
                     </div>
                 </div>
+
             </div>
+          <div class="row">
+                <div class="col-md-4 col-md-offset-4 text-center">
+                    <a href="#portfolio" class="btn btn-default btn-lg fa fa-cogs">  What have we done?</a>
+                </div>
+        </div>                
         </div>
     </div>
 
