tweaked rows for better fuit

--- a/index.html
+++ b/index.html
@@ -169,15 +169,16 @@
         <div class="container">
      <div class="row" ><h1>What have we done?<small></small></h1> </div>
       <div class="row">
-            <div class="col-lg-6">
+            <div class="col-md-8">
                 <h2>The Budget App: Look @ Asheville</h2>
                 <p>Every year Asheville City government budgets and spends more than $130 million. The City's budget impacts our lives every day. All of its funding comes from you—your sales and property taxes, and other goods. All of its spending exists to support you too. City funding drives the dozens of other civic institutions and services designed to make our region prosperous, efficient, and fair. Yet, too many residents don't understand what Asheville City government is or what it does. They keep asking, "Where exactly does our money go?"</p>
                 <a class="btn btn-default fa fa-trello" href="https://trello.com/board/look-at-asheville/511aa7b473f4346f5f0009c5"> See The To-Do list</a>
                 <a class="btn btn-default fa fa-github" href="https://github.com/codeforasheville/look-at-asheville"> See the code</a>
                 <a class="btn btn-default fa fa-bar-chart-o" href="http://codeforasheville.github.com/look-at-asheville/"> See The App</a>
             </div>
-            <hr>
-            <div class="col-lg-6">
+         </div>
+        <div class="row">
+            <div class="col-md-8">
                 <h2>Hack For Food</h2>
                 <p>On June 1st 2013 the Code for Asheville brigade sponsored a local flavor of the National Day of Civic Hacking (NDoCH).  We were one of 95 events around the Country.  Our event was the Hack For Food.  Hack for food was a full day hack-a-thon competition that brought together community organizers, food activists, and techees to solve a community problem.  Food insecurity. The event kicked off with idea pitches, inspired by councilman Gordon Smith.  This was followed by formation of teams, and building of applications that attempted to solve local issues with food insecurity. Some amazing things were built - and the level of awesomeness really blew us away.  In the end a group that connected USDA listed farmers markets (farmersfeed.us) to customers won a fitting prize - 32 lbs of Warren Wilson Beef.  What's important is not what was built but what happened during the event.  Collaboration, ideas, community building, and innovation and all in only 8 hours!  This was made in part due to opening of government data. and it would really be close to impossible accomplish in 8 hours without the data ready to go.</p>
                 <a class="btn btn-default fa fa-book" href="http://storify.com/scott_barnwell/hack-for-food-2013-asheville-nc?utm_content=storify-pingback&utm_medium=sfy.co-twitter&utm_campaign=&utm_source=direct-sfy.co&awesm=sfy.co_eLZr"> See the Storify</a>
@@ -186,7 +187,7 @@
         </div>
     </div>
     <!-- /Portfolio -->
-
+    <hr> 
     <!-- Call to Action -->
     <div class="call-to-action">
         <div class="container">
