Adds Links section and corresponding Nav item
Displaying these links as buttons : just playing around.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             </li>
             <li><a href="#portfolio">Portfolio</a>
             </li>
+            <li><a href="#links">Links</a>
+            </li>
             <li><a href="#map">Contact</a>
             </li>
         </ul>
@@ -207,6 +209,30 @@
     </div>
     <!-- /Map -->
 
+	<!-- Links -->
+    <div id="links" class="links">
+	    <div class="container">
+	        <div class="row">
+	            <div class="col-md-12 text-center">
+				    <h2>Links</h2>
+				    <a class="btn btn-default" href="https://www.facebook.com/codeforasheville"><span class="fa fa-facebook fa-3x"/> Facebook</a>
+				    <a class="btn btn-default" href="https://twitter.com/search?q=%23code4avl&amp;src=typd"><span class="fa fa-twitter fa-3x"/> Twitter</a>
+					<br/>
+				    <a class="btn btn-default" href="http://www.meetup.com/Code-for-Asheville/"><span class="fa fa-link fa-2x"/> Meetup</a>
+				    <a class="btn btn-default" href="https://groups.google.com/a/codeforamerica.org/forum/#!forum/open-asheville"><span class="fa fa-link fa-2x"/> Google Group</a>
+					<br/>
+				    <a class="btn btn-default" href="https://github.com/CodeForAsheville/codeforasheville.github.com/wiki"><span class="fa fa-link"/> Wiki</a>
+				    <a class="btn btn-default" href="https://github.com/codeforashevillehttps://github.com/codeforasheville"><span class="fa fa-link"/> GitHub</a>
+				    <a class="btn btn-default" href="http://codeforasheville.ideascale.com/a/ideafactory.do?id=27296&amp;mode=recent&amp;discussionFilter=active"><span class="fa fa-link"/> Idea Scale</a>
+				    <h3>Public Data</h3>
+				    <a class="btn btn-default" href="http://opendatacatalog.ashevillenc.gov/"><span class="fa fa-folder-open"/> Open Data Asheville</a>
+				    <a class="btn btn-default" href="http://www.avldata.com/http://www.avldata.com/"><span class="fa fa-folder-open"/> AVL Data</a>
+			    </div>
+			</div>
+		</div>
+    </div>
+    <!-- /Links -->
+    
     <!-- Footer -->
     <footer>
         <div class="container">
