--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.css' rel='stylesheet' />
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="css/round-about" rel="stylesheet">
     <style type="text/css">
         
     </style>
@@ -190,6 +192,164 @@
     </div>
     <!-- /Portfolio -->
     <hr> 
+
+
+        <!-- Callout -->
+    <div class="callout">
+        <div class="vert-text">
+            <h1>Code For Asheville</h1>
+        </div>
+    </div>
+    <!-- /Callout -->
+
+   <div id="resources" class="portfolio">
+    <div class="container">
+        <div class="row" ><h1>Resources<small></small></h1> </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <h2>City of Asheville Data Portal</h2>
+                    <p>City of Asheville Data portal.  Open Data provided by the City of Asheville</p>
+                    <a class="btn btn-default fa fa-th" href="http://opendatacatalog.ashevillenc.gov"> See The portal</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <h2>Buncumbe County GIS data</h2>
+                    <p>Buncombe County GIS Data.</p>
+                    <a class="btn btn-default fa fa-globe" href="http://www.buncombecounty.org/Governing/Depts/GIS/DataDownload.aspx"> See The portal</a>
+                </div>
+            </div>        
+        </div>
+    </div>
+
+
+    <hr>
+
+  <!-- Callout -->
+    <div class="callout">
+        <div class="vert-text">
+            <h1>Code For Asheville</h1>
+        </div>
+    </div>
+    <!-- /Callout -->
+
+    <!-- Portfolio -->
+    <div id="portfolio" class="portfolio">
+
+        <div class="container">
+     <div class="row" ><h1>Getting invovled<small></small></h1> </div>
+      <div class="row">
+            <div class="col-md-8">
+                <h2>Join our meetup</h2>
+                <p></p>
+                <a class="btn btn-default fa fa-users" href="http://www.meetup.com/Code-for-Asheville/"> Go to Meetup.com</a>
+            </div>
+         </div>
+        <div class="row">
+            <div class="col-md-8">
+                <h2>Google Group</h2>
+                <p>Join the conversion.</p>
+                <a class="btn btn-default fa fa-comments-o" href="https://groups.google.com/a/codeforamerica.org/forum/#!forum/open-asheville"> Join the Discusion</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                <h2>Facebook</h2>
+                <p>Get Socail, share with your friends</p>
+                <a class="btn btn-default fa fa-facebook-square" href="https://www.facebook.com/codeforasheville" > Social</a>
+            </div>
+        </div>   
+        <div class="row">
+            <div class="col-md-8">
+                <h2>Our Wiki</h2>
+                <p>Meeting Notes, how to's</p>
+                <a class="btn btn-default fa fa-info-circle" href="https://github.com/CodeForAsheville/codeforasheville.github.com/wiki" > Find out more</a>
+            </div>
+        </div>   
+        <div class="row">
+            <div class="col-md-8">
+                <h2>Our Github Repository</h2>
+                <p>All the Code behind the projects</p>
+                <a class="btn btn-default fa fa-github-alt" href="https://github.com/CodeForAsheville" > Code with us</a>
+            </div>
+        </div>     </div>
+    <!-- /Portfolio -->
+    <hr> 
+
+
+        <!-- Callout -->
+    <div class="callout">
+        <div class="vert-text">
+            <h1>Code For Asheville</h1>
+        </div>
+    </div>
+    <!-- /Callout -->
+
+   <div id="members" class="members">
+    <div class="container">
+                <div class="row">
+
+            <div class="col-lg-12">
+                <h1 class="page-header">About Us
+                    <small>It's Nice to Meet You!</small>
+                </h1>
+                <p>This is a great place to start off with a short and sweet description of your company, organization, or whatever purpose your website is serving. Keep it friendly, engaging, but short enough to where you won't lose your reader!</p>
+                <p>If you need a bit more space to describe what is going on, we recommend putting a picture in this section. Use the
+                    <code>pull-right</code>class on the image to make it look good!</p>
+            </div>
+
+            <div class="col-lg-12">
+                <h2 class="page-header">Our Team</h2>
+            </div>
+
+        </div>
+       <div class="row">
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-circle img-responsive" src="http://placehold.it/200x200">
+                <h3>Dave Michelson
+                    <small>Brigade Co-Captain</small>
+                </h3>
+                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-circle img-responsive" src="http://placehold.it/200x200">
+                <h3>John Smath
+                    <small>Job Title</small>
+                </h3>
+                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-circle img-responsive" src="http://placehold.it/200x200">
+                <h3>John Smeth
+                    <small>Job Title</small>
+                </h3>
+                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-circle img-responsive" src="http://placehold.it/200x200">
+                <h3>John Smyth
+                    <small>Job Title</small>
+                </h3>
+                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-circle img-responsive" src="http://placehold.it/200x200">
+                <h3>John Smoth
+                    <small>Job Title</small>
+                </h3>
+                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-circle img-responsive" src="http://placehold.it/200x200">
+                <h3>John Smuth
+                    <small>Job Title</small>
+                </h3>
+                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+            </div>
+        </div>
+    </div>
+    </div>
+
     <!-- Call to Action -->
     <div class="call-to-action">
         <div class="container">
