a few more tweaks

--- a/index.html
+++ b/index.html
@@ -247,28 +247,28 @@
          </div>
         <div class="row">
             <div class="col-md-8">
-                <h2>Google Group</h2>
+                <h2>Join the Google Group</h2>
                 <p>Join the conversion.</p>
                 <a class="btn btn-default fa fa-comments-o" href="https://groups.google.com/a/codeforamerica.org/forum/#!forum/open-asheville"> Join the Discusion</a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-8">
-                <h2>Facebook</h2>
+                <h2>Like us on Facebook</h2>
                 <p>Get Socail, share with your friends</p>
                 <a class="btn btn-default fa fa-facebook-square" href="https://www.facebook.com/codeforasheville" > Social</a>
             </div>
         </div>   
         <div class="row">
             <div class="col-md-8">
-                <h2>Our Wiki</h2>
+                <h2>Review the Wiki</h2>
                 <p>Meeting Notes, how to's</p>
                 <a class="btn btn-default fa fa-info-circle" href="https://github.com/CodeForAsheville/codeforasheville.github.com/wiki" > Find out more</a>
             </div>
         </div>   
         <div class="row">
             <div class="col-md-8">
-                <h2>Our Github Repository</h2>
+                <h2>Fork us on Github</h2>
                 <p>All the Code behind the projects</p>
                 <a class="btn btn-default fa fa-github-alt" href="https://github.com/CodeForAsheville" > Code with us</a>
             </div>
