--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="row">
             <div class="col-md-8">
                 <h2>Like us on Facebook</h2>
-                <p>Get Socail, share with your friends</p>
+                <p>Like us!</p>
                 <a class="btn btn-default fa fa-facebook-square" href="https://www.facebook.com/codeforasheville" > Social</a>
             </div>
         </div>   
