added another resource for idea scale

--- a/index.html
+++ b/index.html
@@ -272,7 +272,17 @@
                 <p>All the Code behind the projects</p>
                 <a class="btn btn-default fa fa-github-alt" href="https://github.com/CodeForAsheville" > Code with us</a>
             </div>
-        </div>     </div>
+        </div>     
+        <div class="row">
+            <div class="col-md-8">
+                <h2>Submit an Idea</h2>
+                <p>Do you have an great idea for Civic Technology Project?  Here's chance to give us 
+                    Some ideas
+                </p>
+                <a class="btn btn-default fa fa-lightbulb-o" href="http://codeforasheville.ideascale.com/a/ideafactory.do?id=27296&amp;mode=recent&amp;discussionFilter=active" > Idea Scale</a>
+            </div>
+        </div>  
+    </div>
     <!-- /Portfolio -->
     <hr> 
 
@@ -369,29 +379,6 @@
     </div>
     <!-- /Map -->
 
-	<!-- Links -->
-    <div id="links" class="links">
-	    <div class="container">
-	        <div class="row">
-	            <div class="col-md-12 text-center">
-				    <h2>Links</h2>
-				    <a class="btn btn-default" href="https://www.facebook.com/codeforasheville"><span class="fa fa-facebook fa-3x"/> Facebook</a>
-				    <a class="btn btn-default" href="https://twitter.com/search?q=%23code4avl&amp;src=typd"><span class="fa fa-twitter fa-3x"/> Twitter</a>
-					<br/>
-				    <a class="btn btn-default" href="http://www.meetup.com/Code-for-Asheville/"><span class="fa fa-link fa-2x"/> Meetup</a>
-				    <a class="btn btn-default" href="https://groups.google.com/a/codeforamerica.org/forum/#!forum/open-asheville"><span class="fa fa-link fa-2x"/> Google Group</a>
-					<br/>
-				    <a class="btn btn-default" href="https://github.com/CodeForAsheville/codeforasheville.github.com/wiki"><span class="fa fa-link"/> Wiki</a>
-				    <a class="btn btn-default" href="https://github.com/codeforashevillehttps://github.com/codeforasheville"><span class="fa fa-link"/> GitHub</a>
-				    <a class="btn btn-default" href="http://codeforasheville.ideascale.com/a/ideafactory.do?id=27296&amp;mode=recent&amp;discussionFilter=active"><span class="fa fa-link"/> Idea Scale</a>
-				    <h3>Public Data</h3>
-				    <a class="btn btn-default" href="http://opendatacatalog.ashevillenc.gov/"><span class="fa fa-folder-open"/> Open Data Asheville</a>
-				    <a class="btn btn-default" href="http://www.avldata.com/http://www.avldata.com/"><span class="fa fa-folder-open"/> AVL Data</a>
-			    </div>
-			</div>
-		</div>
-    </div>
-    <!-- /Links -->
     
     <!-- Footer -->
     <footer>
