removed default click me buttons

--- a/index.html
+++ b/index.html
@@ -365,9 +365,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-default">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-primary">Look at Me!</a>
+                    <h3>Asheville is located in the the mountains of Western North Carolina.</h3>
+                    <p></p>
                 </div>
             </div>
         </div>
