--- a/index.html
+++ b/index.html
@@ -385,11 +385,9 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <ul class="list-inline">
-                        <li><i class="fa fa-facebook fa-3x"></i>
+                        <li><a class="fa fa-facebook fa-3x" href="https://www.facebook.com/codeforasheville" ></a>
                         </li>
-                        <li><i class="fa fa-twitter fa-3x"></i>
-                        </li>
-                        <li><i class="fa fa-dribbble fa-3x"></i>
+                        <li><a class="fa fa-twitter fa-3x" href="https://twitter.com/search?q=%23code4avl&src=typd"  ></a>
                         </li>
                     </ul>
                     <div class="top-scroll">
