--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
     <!-- Side Menu -->
-    <a id="menu-toggle" href="#" class="btn btn-primary btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <!-- <a id="menu-toggle" href="#" class="btn btn-primary btn-lg toggle"><i class="fa fa-bars"></i></a>
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
@@ -46,9 +46,31 @@
             <li><a href="#map">Contact</a>
             </li>
         </ul>
-    </div>
+    </div> -->
     <!-- /Side Menu -->
-
+    <!-- Top Menu -->
+    <nav id='top-menu-nav' class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <ul class="top-nav">
+                <li class="sidebar-brand"><a href="http://codeforasheville.org">Code For Asheville</a>
+                </li>
+                <li><a href="#top">Home</a>
+                </li>
+                <li><a href="#about">About</a>
+                </li>
+                <!-- <li>
+                    <a href="#services">Services</a>
+                </li> -->
+                <li><a href="#portfolio">Portfolio</a>
+                </li>
+                <li><a href="#links">Links</a>
+                </li>
+                <li><a href="#map">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- /Top Menu -->
     <!-- Full Page Image Header Area -->
     <div id="top" class="header">
         <div class="vert-text">
